--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,8 +1,13 @@
+app.home=Главная
+app.footer=Приложение по проекту <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
 app.title=\u041F\u043E\u0434\u0441\u0447\u0435\u0442 \u043A\u0430\u043B\u043E\u0440\u0438\u0439
 app.home=\u0413\u043B\u0430\u0432\u043D\u0430\u044F
 app.footer=\u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u0438\u0435 \u043F\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u0443 <a href\="https\://github.com/JavaOPs/topjava" target\=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
 app.login=\u0417\u0430\u0439\u0442\u0438 \u043A\u0430\u043A
 
+users.title=Пользователи
+users.edit=Редактировать пользователя
+users.add=Добавить пользователя
 users.title=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
 users.name=\u0418\u043C\u044F
 users.email=\u041F\u043E\u0447\u0442\u0430
