--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,3 +1,6 @@
+users.active=Активный
+users.registered=Зарегистрирован
+users.password=Пароль
 app.home=Главная
 app.footer=Приложение по проекту <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
 app.title=\u041F\u043E\u0434\u0441\u0447\u0435\u0442 \u043A\u0430\u043B\u043E\u0440\u0438\u0439
