--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,9 +1,16 @@
+meals.edit=Редактировать еду
+meals.add=Добавить еду
+common.deleted=Удален
+common.saved=Записан
+common.enabled=Активирован
+common.disabled=Деактивирован
+common.errorStatus=Статус ошибки
 users.active=Активный
 users.registered=Зарегистрирован
 users.password=Пароль
-app.home=Главная
+app.title=Подсчет калорий
 app.footer=Приложение по проекту <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
-app.title=\u041F\u043E\u0434\u0441\u0447\u0435\u0442 \u043A\u0430\u043B\u043E\u0440\u0438\u0439
+
 app.login=\u0417\u0430\u0439\u0442\u0438 \u043A\u0430\u043A
 
 users.title=Пользователи
@@ -14,8 +21,6 @@ users.email=\u041F\u043E\u0447\u0442\u0430
 users.roles=\u0420\u043E\u043B\u0438
 
 meals.title=\u041C\u043E\u044F \u0435\u0434\u0430
-meals.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0435\u0434\u0443
-meals.add=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0435\u0434\u0443
 meals.filter=\u041E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u0442\u044C
 meals.startDate=\u041E\u0442 \u0434\u0430\u0442\u044B
 meals.endDate=\u0414\u043E \u0434\u0430\u0442\u044B
