10-jsp-form-login

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -10,6 +10,7 @@ users.registered=Зарегистрирован
 users.password=Пароль
 app.title=Подсчет калорий
 app.footer=Приложение по проекту <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
+app.enter=Войти как
 
 app.login=\u0417\u0430\u0439\u0442\u0438 \u043A\u0430\u043A
 
