Lesson9_after_patches

--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,28 +1,20 @@
-meals.edit=Редактировать еду
-meals.add=Добавить еду
-common.deleted=Удален
-common.saved=Записан
-common.enabled=Активирован
-common.disabled=Деактивирован
-common.errorStatus=Статус ошибки
-users.active=Активный
-users.registered=Зарегистрирован
-users.password=Пароль
-app.title=Подсчет калорий
-app.footer=Приложение по проекту <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
-app.enter=Войти как
+app.title=\u041F\u043E\u0434\u0441\u0447\u0435\u0442 \u043A\u0430\u043B\u043E\u0440\u0438\u0439
+app.footer=\u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u0438\u0435 \u043F\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u0443 <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
+app.enter=\u0412\u043E\u0439\u0442\u0438 \u043A\u0430\u043A
 
-app.login=\u0417\u0430\u0439\u0442\u0438 \u043A\u0430\u043A
-
-users.title=Пользователи
-users.edit=Редактировать пользователя
-users.add=Добавить пользователя
+users.title=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
+users.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+users.add=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
 users.name=\u0418\u043C\u044F
 users.email=\u041F\u043E\u0447\u0442\u0430
 users.roles=\u0420\u043E\u043B\u0438
+users.active=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439
+users.registered=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D
+users.password=\u041F\u0430\u0440\u043E\u043B\u044C
 
 meals.title=\u041C\u043E\u044F \u0435\u0434\u0430
-meals.filter=\u041E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u0442\u044C
+meals.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0435\u0434\u0443
+meals.add=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0435\u0434\u0443
 meals.startDate=\u041E\u0442 \u0434\u0430\u0442\u044B
 meals.endDate=\u0414\u043E \u0434\u0430\u0442\u044B
 meals.startTime=\u041E\u0442 \u0432\u0440\u0435\u043C\u0435\u043D\u0438
@@ -31,9 +23,10 @@ meals.description=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
 meals.dateTime=\u0412\u0440\u0435\u043C\u044F
 meals.calories=\u041A\u0430\u043B\u043E\u0440\u0438\u0438
 
-common.add=Добавить
+common.add=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
 common.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
-common.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
-common.update=\u041E\u0431\u043D\u043E\u0432\u0438\u0442\u044C
-common.save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
-common.cancel=\u041E\u0442\u043C\u0435\u043D\u0430
+common.deleted=\u0423\u0434\u0430\u043B\u0435\u043D
+common.saved=\u0417\u0430\u043F\u0438\u0441\u0430\u043D
+common.enabled=\u0410\u043A\u0442\u0438\u0432\u0438\u0440\u043E\u0432\u0430\u043D
+common.disabled=\u0414\u0435\u0430\u043A\u0442\u0438\u0432\u0438\u0440\u043E\u0432\u0430\u043D
+common.errorStatus=\u0421\u0442\u0430\u0442\u0443\u0441 \u043E\u0448\u0438\u0431\u043A\u0438
