--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,3 +1,6 @@
+users.registered=Зарегистрирован
+users.password=Пароль
+users.caloriesPerDay=Норма калорий в день
 app.profile=профиль
 app.title=\u041F\u043E\u0434\u0441\u0447\u0435\u0442 \u043A\u0430\u043B\u043E\u0440\u0438\u0439
 app.footer=\u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u0438\u0435 \u043F\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u0443 <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
