--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,7 +1,7 @@
-users.caloriesPerDay=Норма калорий в день
-app.profile=профиль
-app.register=Регистрирация
-app.registered=Вы загеристрированы. Введите ваш логин/пароль.
+users.caloriesPerDay=\u041d\u043e\u0440\u043c\u0430 \u043a\u0430\u043b\u043e\u0440\u0438\u0439 \u0432 \u0434\u0435\u043d\u044c
+app.profile=\u043f\u0440\u043e\u0444\u0438\u043b\u044c
+app.register=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u0430\u0446\u0438\u044f
+app.registered=\u0412\u044b \u0437\u0430\u0433\u0435\u0440\u0438\u0441\u0442\u0440\u0438\u0440\u043e\u0432\u0430\u043d\u044b\u002e \u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0432\u0430\u0448 \u043b\u043e\u0433\u0438\u043d\u002f\u043f\u0430\u0440\u043e\u043b\u044c\u002e
 app.title=\u041F\u043E\u0434\u0441\u0447\u0435\u0442 \u043A\u0430\u043B\u043E\u0440\u0438\u0439
 app.footer=\u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u0438\u0435 \u043F\u043E \u043F\u0440\u043E\u0435\u043A\u0442\u0443 <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
 app.enter=\u0412\u043E\u0439\u0442\u0438 \u043A\u0430\u043A
@@ -15,6 +15,7 @@ users.roles=\u0420\u043E\u043B\u0438
 users.active=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0439
 users.registered=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D
 users.password=\u041F\u0430\u0440\u043E\u043B\u044C
+users.emailExists=\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c \u0441 \u0442\u0430\u043a\u043e\u0439 \u043f\u043e\u0447\u0442\u043e\u0439 \u0443\u0436\u0435 \u0435\u0441\u0442\u044c \u0432 \u043f\u0440\u0438\u043b\u043e\u0436\u0435\u043d\u0438\u0438 
 
 meals.title=\u041C\u043E\u044F \u0435\u0434\u0430
 meals.edit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0435\u0434\u0443
